--- a/launcher/Cargo.toml
+++ b/launcher/Cargo.toml
@@ -1,14 +1,5 @@
-[package]
-name = "launcher"
-version = "0.1.0"
-authors = ["Bradley Bridges <bradley@bbridges.io>"]
-edition = "2018"
-
-[dependencies]
-dirs-next = "2.0"
-errno = "0.2.7"
-libc = "0.2.86"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-shellexpand = "2.1"
-tar = "0.4.32"
+[workspace]
+members = [
+  "crates/giftwrap-archive",
+  "crates/giftwrap-launcher",
+]
