Replace rebar3 with mix
With both rebar3 and mix plugins coming, it's natural to go ahead and
use Elixir for the build tool in all libraries

--- a/lib/giftwrap/.gitignore
+++ b/lib/giftwrap/.gitignore
@@ -1,12 +1,11 @@
-# Erlang defaults.
+# Elixir defaults.
 /_build
-/ebin
 /cover
 /deps
 /doc
-/_checkouts
+/.fetch
 erl_crash.dump
-*.o
-*.beam
-*.plt
-.rebar3
+*.ez
+
+# Package tarball.
+giftwrap-*.tar
