--- a/launcher/crates/giftwrap_launcher/Cargo.toml
+++ b/launcher/crates/giftwrap_launcher/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "giftwrap-launcher"
+name = "giftwrap_launcher"
 version = "0.1.0"
 authors = ["Bradley Bridges <bradley@bbridges.io>"]
 edition = "2018"
@@ -9,4 +9,4 @@ name = "launcher"
 path = "src/main.rs"
 
 [dependencies]
-giftwrap-archive = { path = "../giftwrap-archive", version = "0.1.0" }
+giftwrap_archive = { path = "../giftwrap_archive", version = "0.1.0" }
