Restore using rebar3 for the main giftwrap library
This reverts commit f74f4aae7298b682092a26dfc9ba010c2e2a021c.

--- a/lib/giftwrap/.gitignore
+++ b/lib/giftwrap/.gitignore
@@ -1,11 +1,12 @@
-# Elixir defaults.
+# Erlang defaults.
 /_build
+/ebin
 /cover
 /deps
 /doc
-/.fetch
+/_checkouts
 erl_crash.dump
-*.ez
-
-# Package tarball.
-giftwrap-*.tar
+*.o
+*.beam
+*.plt
+.rebar3
