Use normal cargo commands in CI instead of actions-rs ones
The working directory wasn't getting picked up with actions-rs actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,18 +59,9 @@ jobs:
           components: rustfmt, clippy
 
       - name: Build launcher
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features
+        run: cargo build --all-features
 
       - name: Check launcher code formatting   
-        uses: actions-rs/cargo@v1
-        with:
-          command: format
-          args: --all -- --check
-      - name: Annotate commit with clippy warnings
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+        run: cargo format --all -- --check
+      - name: Check launcher clippy warnings
+        run: cargo clippy --all-features -- -D warnings
