Fix cargo fmt command name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
         working-directory: launcher
 
       - name: Check launcher code formatting   
-        run: cargo format --all -- --check
+        run: cargo fmt --all -- --check
         working-directory: launcher
       - name: Check launcher clippy warnings
         run: cargo clippy --all-features -- -D warnings
